# C-AI-BRAIN

./: .gitignore  BRAIN_AI_IMPLEMENTATION_SUMMARY.md  BUGFIX_SUMMARY.md  BUILD_INSTRUCTIONS.md  BUILD_VERIFICATION.md  COMPLETE_IMPLEMENTATION_REPORT.md  COMPLETION_SUMMARY.md  Dockerfile.core  Dockerfile.ocr  Dockerfile.rest  FILE_TREE.txt  FINAL_STATUS.md  FINAL_STATUS_COMPLETE.md  HONEST_STATUS.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_STATUS.md  INVENTORY.md  LICENSE  OPERATIONS.md  PRODUCTION_HARDENING.md  PRODUCTION_READY_SUMMARY.md  PROJECT_OVERVIEW.md  QUICK_REFERENCE.md  QUICK_START.md  RAG_PLUS_PLUS_IMPLEMENTATION.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  docker-compose.dev.yml  docker-compose.yml  pytest.ini  start_production.sh  test_complete_system.sh  test_e2e.sh
.github/workflows/: ci.yml  cmake-multi-platform.yml  codacy.yml  codeql.yml  docker-image.yml  docker-publish.yml  google.yml
DeepSeek-OCR-main/: README.md
DeepSeek-OCR-main/DeepSeek-OCR-master/DeepSeek-OCR-hf/: run_dpsk_ocr.py
DeepSeek-OCR-main/DeepSeek-OCR-master/DeepSeek-OCR-vllm/: deepseek_ocr.py  run_dpsk_ocr_eval_batch.py  run_dpsk_ocr_image.py  run_dpsk_ocr_pdf.py
DeepSeek-OCR-main/DeepSeek-OCR-master/DeepSeek-OCR-vllm/deepencoder/: clip_sdpa.py
DeepSeek-OCR-main/DeepSeek-OCR-master/DeepSeek-OCR-vllm/process/: ngram_norepeat.py
bench/: run_bench.py
brain-ai/: BUILD_STATUS.md  BUILD_VERIFICATION_REPORT.md  CMakeLists.txt  DEEPSEEK_OCR_INTEGRATION.md  Dockerfile  PRODUCTION_INTEGRATION_PLAN.md  README.md  build.sh  docker-compose.yml  setup.py
brain-ai-rest-service/: Dockerfile.secure  README.md  app.py  app_real.py  chunker.py  config.yaml  eval_harness.py  facts_store.py  llm_deepseek.py  metrics.py  middleware.py  multi_agent.py  persistence.py  rate_limiter.py  requirements.txt  reranker.py  test_eval_comprehensive.py  tools.py
brain-ai-rest-service/app/: __init__.py  app.py  config.py  core_bridge.py  embeddings.py  embeddings_local.py  llm_deepseek.py  logging_utils.py  metrics.py  rate_limiter.py  schemas.py
brain-ai-rest-service/data/: facts.db
brain-ai-rest-service/tests/: test_app_smoke.py  test_monitoring_histogram.py
brain-ai-rest-service/wheels/: README.md
brain-ai/bindings/: brain_ai_bindings.cpp  pybind_module.cpp
brain-ai/deepseek-ocr-service/: Dockerfile  docker-compose.yml  requirements.txt
brain-ai/deepseek-ocr-service/app/: __init__.py  config.py  main.py  ocr_engine.py
brain-ai/examples/: grpc_server_example.cpp
brain-ai/include/: cognitive_handler.hpp  episodic_buffer.hpp  explanation_engine.hpp  hallucination_detector.hpp  hybrid_fusion.hpp  semantic_network.hpp  utils.hpp
brain-ai/include/document/: document_processor.hpp  ocr_client.hpp  text_validator.hpp
brain-ai/include/errors/: exceptions.hpp
brain-ai/include/grpc/: brain_ai_service.hpp
brain-ai/include/indexing/: index_manager.hpp
brain-ai/include/logging/: logger.hpp
brain-ai/include/monitoring/: health.hpp  metrics.hpp
brain-ai/include/resilience/: circuit_breaker.hpp
brain-ai/include/vector_search/: hnsw_index.hpp
brain-ai/proto/: brain_ai.proto
brain-ai/python/: README.md  pyproject.toml
brain-ai/python/src/brain_ai/: __init__.py
brain-ai/src/: cognitive_handler.cpp  episodic_buffer.cpp  explanation_engine.cpp  hallucination_detector.cpp  hybrid_fusion.cpp  main.cpp  semantic_network.cpp  utils.cpp
brain-ai/src/document/: document_processor.cpp  ocr_client.cpp  text_validator.cpp
brain-ai/src/grpc/: brain_ai_service.cpp
brain-ai/src/indexing/: index_manager.cpp
brain-ai/src/logging/: logger.cpp
brain-ai/src/monitoring/: health.cpp  metrics.cpp
brain-ai/src/resilience/: circuit_breaker.cpp
brain-ai/src/vector_search/: hnsw_index.cpp
brain-ai/tests/: CMakeLists.txt  test_cognitive_handler.cpp  test_document_processor.cpp  test_episodic_buffer.cpp  test_explanation_engine.cpp  test_hallucination_detector.cpp  test_hybrid_fusion.cpp  test_main.cpp  test_monitoring.cpp  test_resilience.cpp  test_semantic_network.cpp  test_utils.cpp  test_vector_search.cpp
brain-ai/tests/integration/: test_ocr_integration.cpp
deepseek-ocr-service/: Dockerfile  README.md  app.py  docker-compose.yml  requirements.txt
docker/ocr_stub/: app.py
docs/analysis/: HTDE_ANALYSIS_NEW_UPLOADS.md  HTDE_COMPREHENSIVE_ANALYSIS_AND_FIX_PLAN.md  NEW_UPLOADS_VISUAL_SUMMARY.md  VISUAL_SUMMARY.md
docs/core_v4/: ARCHITECTURE_DIAGRAM.txt  CPP_CODE_EXAMPLES.md  IMPLEMENTATION_CHECKLIST.md  MASTER_INDEX_V4.md  README_V4_COGNITIVE_ARCHITECTURE.md
docs/production/: ACCOMPLISHMENT_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  HONEST_CAPABILITIES.md  PRODUCTION_ROADMAP_3_6_MONTHS.md  README_PRODUCTION.md  START_HERE.md
docs/reference/: QUICK_REFERENCE.md
hnswlib-master/examples/cpp/: example_multivector_search.cpp
hnswlib-master/hnswlib/: hnswalg.h
hnswlib-master/python_bindings/: bindings.cpp
scripts/: seed.sh
tests/e2e/: test_end_to_end.py  test_ocr_contract.py
